###############################################################
################# SCULLY TYPESCRIPT COMPILER #########################
###############################################################

package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

exports_files([
    "tsconfig.scully.json"
])

ts_library(
    name = "scully-ts",
    tsconfig = "tsconfig.scully.json",
    srcs = glob(["*.ts", "**/*.ts"], exclude = ["**/**/*.d.ts"]),
    module_name = "@scullyio/scully",
    deps = [
        "@npm//fs-extra",
        "@npm//rxjs",
        "@npm//@types/express",
        "@npm//@types/marked",
        "@npm//@types/node",
        "@npm//@types/puppeteer",
        "@npm//@types/yargs",
        "@npm//@types/yamljs",
        "@npm//@types/jsdom",
        "@npm//codelyzer",
        "@npm//express",
        "@npm//open",
        "@npm//guess-parser",
        "@npm//marked",
        "@npm//puppeteer",
        "@npm//typescript",
        "@npm//yargs",
        "@npm//jsonc",
        "@npm//chalk",
        "@npm//yamljs",
        "@npm//chokidar",
        "@npm//selfsigned",
        "@npm//http-proxy-middleware",
        "@npm//jsdom",
        "@npm//asciidoctor.js",
        "@npm//front-matter",
        "@npm//tslib",
        "@npm//prettier",
        "@npm//ts-node",
    ]
)


###############################################################
###################### NODE SERVER ############################
###############################################################

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "run",
    data = [
      ":scully-ts"
    ],
    entry_point = ":index.ts",
    args = ["serve"],
    visibility = ["//visibility:public"],
)
